# pyclean

./: .gitignore  README.md  pyproject.toml
src/pyclean/: __main__.py  cleaner.py  cli.py
