[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyclean"
version = "0.1.0"
description = "Tidy up cluttered directories by file type — with dry-run, undo, and gorgeous terminal output."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["rich>=13.0.0"]

[project.scripts]
pyclean = "pyclean.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pyclean"]
